# furgbol_core

./: CMakeLists.txt  ControlMessage.h
cmake/: FurgbolCoreConfig.cmake
include/communication/: multicast_receiver.h
include/data_management/: sensor_instance.h  sensor_loader.h  sensor_repository.h  sensor_type.h
include/models/: arc.h  ball.h  camera_calibration.h  field.h  line.h  point.h  robot.h
include/virtual_sensors/: isensor.h
include/virtual_sensors/sensor_assembly/: internals.h  sensor_assembly.h
src/communication/: multicast_receiver.cpp
src/data_management/: sensor_loader.cpp  sensor_repository.cpp
tests/: CMakeLists.txt  first_test.cpp
